PR feedback pre-1520 landing.